# Porto-photogrammetry-

./: .gitmodules  CLAUDE.md  README.md  environment.yml  meshroom-setup.md  requirements.txt
baseline/: benchmark_meshroom.py
config/: angle_validator.py  neus2_fixed_generator.py
docs/: Introduction.md  README_pipeline.md
pipeline/reconstruction/: run_2dgs.py  run_gw.py  run_pgsr.py  run_sugar.py
pipeline/sfm/: run_colmap.sh  run_vggt_to_colmap.py
scripts/: run_colmap.sh  run_vggt_sugar.sbatch  setup_sugar_b200.sh
sfm/: run_colmap.sh
src/: visual_util.py
src/2dgs/: .gitignore  metrics.py  train.py
src/2dgs/scene/: dataset_readers.py
src/gaussian_wrapping/: .gitignore  render.py  texture_mesh.py
src/gaussian_wrapping/gaussian_renderer/: __init__.py
src/gaussian_wrapping/gaussian_wrapping/: pivot_based_mesh_extraction.py  texture_mesh.py  train.py
src/gaussian_wrapping/scene/: dataset_readers.py
src/pgsr/: .gitignore  render.py  train.py
src/pipeline/: conversion_utils.py  demo_colmap.py  example_usage.py  new_vggt_converter.py  quick_fix.py  run_pipeline.py  run_pipeline_old.py  run_pipeline_test.py  run_sugar_pipeline.py  run_vggt.py  vggt_to_colmap.py  vggt_to_ingp.py  vggt_to_neus2_converter.py  vggt_to_neus2_converter_new.py  vggt_to_neus2_converter_old.py
src/sugar/: .gitignore  extract_refined_mesh_with_texture.py  render_blender_scene.py  train.py
src/utils/: visual_util.py
src/vggt/: pyproject.toml  requirements.txt
src/vggt/utils/: load_fn.py
src/vggt/vggt/dependency/: vggsfm_utils.py
src/vggt/vggt/utils/: load_fn.py
(+24 files in other folders)
